--- a/异常.md
+++ b/异常.md
@@ -30,7 +30,7 @@ throw用在方法内，用来抛出一个异常对象，将这个异常对象传
 <details>
 <summary>throw演示程序</summary>
 
-```
+```java
 public class test {
     public static void main(String[] args) {
         int[] arr = {
